--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         <b>O Play! framework foi construido seguindo todas essas premissas.</b>
     <h3>Por que o curso é importante?</h3>
     <p>para que voce possa:</p>
+<h1> Artigos Publicados <h1>
+
+<p>Como utilizar o PLAY! Framework </p>
+<p> Empresas procuram especialistas em  PLAY! Framework </p>
+<p> O que é o PLAY! Framework </p>
+
+<div>
+Comentário 
+<textarea input type="text" name ="comentários" id = "comentários"></textarea>
+
  <tfoot><center>
           <p>  Contato: 4002-8922 || equipe10playgo@gmail.com </p>
           <p>  Rio Largo || todos os direitos reservados à Matheus, Mayra e Wanessa.</p> 
