--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div>
 Comentário 
 <textarea input type="text" name ="comentários" id = "comentários"></textarea>
-
+</div>
  <tfoot><center>
           <p>  Contato: 4002-8922 || equipe10playgo@gmail.com </p>
           <p>  Rio Largo || todos os direitos reservados à Matheus, Mayra e Wanessa.</p> 
