--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <b>O Play! framework foi construido seguindo todas essas premissas.</b>
     <h3>Por que o curso é importante?</h3>
     <p>para que voce possa:</p>
-<h1> Artigos Publicados <h1>
+<h1> Artigos Publicados </h1>
 
 <p>Como utilizar o PLAY! Framework </p>
 <p> Empresas procuram especialistas em  PLAY! Framework </p>
