--- a/curso.html
+++ b/curso.html
@@ -2,6 +2,14 @@
 <html lang="pt-br">
  
 <head>
+        <style rel="stylesheet">
+                h1{background-color:green;
+                  border-top-width: 30px;
+                  border-top-style: solid;
+                  border-top-color:green;
+                  font-size:40px;
+          }
+                </style>
     <title> PLAY! FRAMEWORK</title>
 </head>
  
